--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 	<body>
 		<header>
 			<!-- <nav><a href='/about'>About</a> • <a href='/previous'>Previous Problems</a> • <a href='/leaderboard'>Leaderboard</a><nav> -->
-			<span>
+			<div class='buttons'>
 				<a href='/about'>About</a> •
 				<a href='/previous'>Previous Problems</a> •
 				<a href='/leaderboard'>Leaderboard</a>
-			</span>
+			</div>
 
-			<span>
+			<div class='auth'>
 				<button id='login'>Log in</button>
 				<button id='logout'>Log out</button>
 
@@ -31,7 +31,7 @@
 					<!-- fake placeholder image -->
 					<img id='profile-img' src='https://avatars2.githubusercontent.com/u/1709898?s=460&u=e8f9c8f8f9f8f9f9f9f9f9f9f9f9f9f9f9f9f9f9&v=4' alt='profile' />
 				</a>
-			</span>
+			</div>
 		</header>
 
 		<h1>FizzBuzz (#0)</h1>
