Move codemirror script to htmlpage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	</head>
 	<body>
 		<header>
-			<!-- <nav><a href='/about'>About</a> • <a href='/previous'>Previous Problems</a> • <a href='/leaderboard'>Leaderboard</a><nav> -->
 			<div class='buttons'>
 				<a href='/about'>About</a> •
 				<a href='/previous'>Previous Problems</a> •
@@ -60,7 +59,55 @@
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.js' integrity='sha512-xwrAU5yhWwdTvvmMNheFn9IyuDbl/Kyghz2J3wQRDR8tyNmT8ZIYOd0V3iPYY/g4XdNPy0n/g0NvqGu9f0fPJQ==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/mode/javascript/javascript.min.js' integrity='sha512-IS1FyxQkiJHT1SAvLXBaJu1UTFSIw0GT/DuzxHl69djqyLoEwGmR2davcZUnB8M7ppi9nfTGZR/vdfqmWt+i6A==' crossorigin='anonymous' referrerpolicy='no-referrer'></script>
 		<script src='https://codemirror.net/3/addon/edit/closebrackets.js'></script>
-		<script src='main.js'></script>
 		<script src="https://cdn.auth0.com/js/auth0-spa-js/1.13/auth0-spa-js.production.js"></script>
+		<script src='main.js'></script>
+		<script>
+			const codemirror = CodeMirror(document.querySelector('div#code'), {
+				value: 'print("FizzBuzz")',
+				mode: 'javascript',
+				theme: 'material-darker',
+				autoCloseBrackets: true,
+				lineNumbers: true,
+			})
+
+			const getFinishDate = () => {
+				const finishDate = new Date();
+				finishDate.setDate(finishDate.getDate() + 1)
+				finishDate.setHours(5);
+				finishDate.setMinutes(30);
+				finishDate.setMilliseconds(0);
+				return finishDate;
+			}
+
+			let finishDate = getFinishDate();
+
+			const remainingTime = finishDate - Date.now();
+			document.querySelector('#timestring').innerHTML = msToTime(remainingTime);
+			setInterval(() => {
+				if (finishDate - Date.now() <= 0) {
+					finishDate = getFinishDate();
+				}
+
+				const remainingTime = finishDate - Date.now();
+				document.querySelector('#timestring').innerHTML = msToTime(remainingTime);
+			}, 60000);
+
+			function padTo2Digits(num) {
+				return num.toString().padStart(2, '0');
+			}
+
+			function msToTime(milliseconds) {
+				let seconds = Math.floor(milliseconds / 1000);
+				let minutes = Math.floor(seconds / 60);
+				let hours = Math.floor(minutes / 60);
+
+				seconds = seconds % 60;
+				minutes = seconds >= 30 ? minutes + 1 : minutes;
+				minutes = minutes % 60;
+				hours = hours % 24;
+
+				return `${padTo2Digits(hours)}h ${padTo2Digits(minutes)}m`;
+			}
+		</script>
 	</body>
 </html>
